hphp/hack/test/typecheck/reified_generics/no_shape_keys_generics.php.exp
File "no_shape_keys_generics.php", line 9, characters 5-5:
Generics are not allowed in this position. (Typing[4306])
